--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/1. 查询变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/1. 查询变量集.md
@@ -17,3 +17,7 @@
 a）进入全自动测试平台，单击页面上方“测试场景 > 变量集”，进入变量集管理页面，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fstest/cscj/datamanage/varmanage/1.png)
+
+##### 图1-1 变量集管理页面
+
+b）变量集管理页面展示了项目用到的所有变量集。
