--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/2. 新增变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/2. 新增变量集.md
@@ -7,3 +7,9 @@
 ##### 4.2.2.3 新增变量集
 
 本节介绍新增变量集的具体操作过程。
+
+##### 4.2.2.3.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 变量集”，进入变量集管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/datamanage/varmanage/1.png)
