--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/2. 新增变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/2. 新增变量集.md
@@ -13,3 +13,9 @@
 a）进入全自动测试平台，单击页面上方“测试场景 > 变量集”，进入变量集管理页面，如图2-1所示：
 
 ![2-1](https://www.feisuanyz.com/fstest/cscj/datamanage/varmanage/1.png)
+
+##### 图2-1 变量集管理页面
+
+b）单击“新增变量集”，系统弹出新增变量集页面，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/cscj/datamanage/varmanage/2.png)
