--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/3. 修改变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/3. 修改变量集.md
@@ -11,3 +11,9 @@
 ##### 4.2.2.4.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > 变量集”，进入变量集管理页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cscj/datamanage/varmanage/3.png)
+
+##### 图3-1 变量集管理页面
+
+b）选中需修改的变量集，单击操作列的修改按钮，修改完成后单击“确定”即可。
