--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/4. 删除变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/4. 删除变量集.md
@@ -5,3 +5,9 @@
 ##### 4.2.2 变量集管理
 
 ##### 4.2.2.5 删除变量集
+
+本节介绍删除变量集的具体操作过程。
+
+##### 4.2.2.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 变量集”，进入变量集管理页面，如图4-1所示：
