--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/4. 删除变量集.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/2. 变量集管理/4. 删除变量集.md
@@ -11,3 +11,9 @@
 ##### 4.2.2.4.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > 变量集”，进入变量集管理页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cscj/datamanage/varmanage/3.png)
+
+##### 图4-1 变量集管理页面
+
+b）选中需删除的变量集，单击操作列的删除按钮， 系统弹出提示信息，单击“确定”即可。
