--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/1. 查询Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/1. 查询Excel文件夹.md
@@ -5,3 +5,9 @@
 ##### 4.2.3 Excel管理
 
 ##### 4.2.3.1 基础概述
+
+Excel用于作为测试场景填写数据的数据源，测试场景的每个变量可以选择哪一个Excel的哪一列取哪一行作为数据。
+
+##### 4.2.3.2 查询Excel文件夹
+
+本节介绍查询Excel文件夹的具体操作过程。
