--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/1. 查询Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/1. 查询Excel文件夹.md
@@ -11,3 +11,9 @@ Excel用于作为测试场景填写数据的数据源，测试场景的每个变
 ##### 4.2.3.2 查询Excel文件夹
 
 本节介绍查询Excel文件夹的具体操作过程。
+
+##### 4.2.3.2.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/1.png)
