--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/1. 查询Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/1. 查询Excel文件夹.md
@@ -17,3 +17,7 @@ Excel用于作为测试场景填写数据的数据源，测试场景的每个变
 a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图1-1所示：
 
 ![1-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/1.png)
+
+##### 图1-1 Excel管理页面
+
+b）Excel管理页面左侧列表展示了项目用到的所有Excel文件夹。
