--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/2. 新建Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/2. 新建Excel文件夹.md
@@ -5,3 +5,11 @@
 ##### 4.2.3 Excel管理
 
 ##### 4.2.3.3 新建Excel文件夹
+
+本节介绍新建Excel文件夹的具体操作过程。
+
+##### 4.2.3.3.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/2_1.png)
