--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/2. 新建Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/2. 新建Excel文件夹.md
@@ -13,3 +13,9 @@
 a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图2-1所示：
 
 ![2-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/2_1.png)
+
+##### 图2-1 Excel管理页面
+
+b）单击页面左侧列表的“+”按钮，系统弹出新增模块页面，如图2-2所示：
+
+![2-2](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/2_2.png)
