--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/3. 修改Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/3. 修改Excel文件夹.md
@@ -9,3 +9,9 @@
 本节介绍修改Excel文件夹的具体操作过程。
 
 ##### 4.2.3.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/3.png)
+
+##### 图3-1 Excel管理页面
