--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/4. 删除Excel文件夹.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/4. 删除Excel文件夹.md
@@ -11,3 +11,9 @@
 ##### 4.2.3.5.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/4.png)
+
+##### 图4-1 Excel管理页面
+
+b）选中需删除的Excel文件夹，单击三个点按钮，选择“删除模块”即可。
