--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/5. 新增Excel文件.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/5. 新增Excel文件.md
@@ -5,3 +5,9 @@
 ##### 4.2.3 Excel管理
 
 ##### 4.2.3.6 新增Excel文件
+
+本节介绍新增Excel文件的具体操作过程。
+
+##### 4.2.3.6.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图5-1所示：
