--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/5. 新增Excel文件.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/5. 新增Excel文件.md
@@ -11,3 +11,11 @@
 ##### 4.2.3.6.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/5_1.png)
+
+##### 图5-1 Excel管理页面
+
+b）选择Excel文件夹，单击“新增Excel文件”，系统弹出新增Excel文件页面，如图5-2所示：
+
+![5-2](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/5_2.png)
