--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/6. 修改Excel文件.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/6. 修改Excel文件.md
@@ -11,3 +11,9 @@
 ##### 4.2.3.7.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/6.png)
+
+##### 图6-1 Excel管理页面
+
+b）选中需修改的Excel文件，单击修改按钮，系统弹出编辑Excel文件页面，如图6-2所示：
