--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/7. 删除Excel文件.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/7. 删除Excel文件.md
@@ -7,3 +7,11 @@
 ##### 4.2.3.8 删除Excel文件
 
 本节介绍删除Excel文件的具体操作过程。
+
+##### 4.2.3.8.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/7.png)
+
+##### 图7-1 Excel管理页面
