--- a/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/8. 下载Excel文件.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/2. 数据集管理/3. Excel管理/8. 下载Excel文件.md
@@ -11,3 +11,9 @@
 ##### 4.2.3.9.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > Excel管理”，进入Excel管理页面，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fstest/cscj/datamanage/excelmanage/8.png)
+
+##### 图8-1 Excel管理页面
+
+b）选中需下载的Excel文件，单击操作列的“更多”选项，选择“下载”即可。
