--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/1. 查询测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/1. 查询测试场景.md
@@ -3,3 +3,11 @@
 #### 4.3 测试场景管理 
 
 ##### 4.3.1 基础概述
+
+a）测试场景建立在测试用例的一对一关系上，即先有测试用例再有测试场景，测试计划和性能测试不能关联没有测试场景的测试用例。
+
+b）测试场景用于对测试用例进行测试活动，建立测试关系，划分测试步骤，并获取测试结果以对测试用例进行解析处理。
+
+##### 4.3.2 查询测试场景
+
+本节介绍查询测试场景的具体操作过程。
