--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/2. 新建测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/2. 新建测试场景.md
@@ -7,3 +7,11 @@
 本节介绍新建测试场景的具体操作过程。
 
 ##### 4.3.3.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/2.png)
+
+##### 图2-1 测试场景管理页面
+
+b）选中需新建测试场景的测试用例，单击“新增场景”，填写场景的基本信息，填写完成后单击“下一步”，如图2-2所示：
