--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/2. 新建测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/2. 新建测试场景.md
@@ -61,3 +61,11 @@ h）选中接口，单击三个点按钮，选择“后置处理器 > JSON提取
 ##### 图2-9 新增后置处理器
 
 ![2-10](https://www.feisuanyz.com/fstest/cscj/cscjmanage/9.png)
+
+##### 图2-10 提取器配置
+
+i）获取提取值后，应用到另外一个接口，作为另外一个接口的参数值，如图2-11所示：
+
+![2-11](https://www.feisuanyz.com/fstest/cscj/cscjmanage/10.png)
+
+##### 图2-11 应用提取值
