--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/4. 删除测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/4. 删除测试场景.md
@@ -5,3 +5,11 @@
 ##### 4.3.5 删除测试场景
 
 本节介绍删除测试场景的具体操作过程。
+
+##### 4.3.5.1 操作步骤
+
+##### 注意：已关联测试计划或性能测试的测试场景不能删除。
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/11.png)
