--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/4. 删除测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/4. 删除测试场景.md
@@ -13,3 +13,7 @@
 a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图4-1所示：
 
 ![4-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/11.png)
+
+##### 图4-1 测试场景管理页面
+
+b）选中需删除的测试场景，单击页面上方“重置测试场景”选项，系统弹出提示信息，单击“确定”即可。
