--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/5. 运行测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/5. 运行测试场景.md
@@ -3,3 +3,13 @@
 #### 4.3 测试场景管理 
 
 ##### 4.3.6 运行测试场景
+
+本节介绍运行测试场景的具体操作过程。
+
+##### 4.3.6.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/12.png)
+
+##### 图5-1 测试场景管理页面
