--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/6. 导出测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/6. 导出测试场景.md
@@ -5,3 +5,9 @@
 ##### 4.3.7 导出测试场景
 
 本节介绍导出测试场景的具体操作过程。
+
+##### 4.3.7.1 操作步骤
+
+##### 说明：导出的测试场景有两种格式：JSON或JMETER，JSON用于导入到本系统其它场景，JMETER用于导入到JMeter工具。
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图6-1所示：
