--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/6. 导出测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/6. 导出测试场景.md
@@ -11,3 +11,9 @@
 ##### 说明：导出的测试场景有两种格式：JSON或JMETER，JSON用于导入到本系统其它场景，JMETER用于导入到JMeter工具。
 
 a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图6-1所示：
+
+![6-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/14.png)
+
+##### 图6-1 测试场景管理页面
+
+b）选中需导出的测试场景，单击页面上方“导出场景”选项，并选择导出格式即可，系统便会自动生成相应格式的测试场景文件。
