--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/7. 导入测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/7. 导入测试场景.md
@@ -5,3 +5,9 @@
 ##### 4.3.8 导入测试场景
 
 本节介绍导入测试场景的具体操作过程。
+
+##### 4.3.8.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图7-1所示：
+
+![7-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/15_1.png)
