--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/7. 导入测试场景.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/7. 导入测试场景.md
@@ -11,3 +11,9 @@
 a）进入全自动测试平台，单击页面上方“测试场景 > 测试场景管理”，进入测试场景管理页面，如图7-1所示：
 
 ![7-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/15_1.png)
+
+##### 图7-1 测试场景管理页面
+
+b）单击页面上方“导入场景”选项，系统弹出导入场景页面，如图7-2所示：
+
+![7-2](https://www.feisuanyz.com/fstest/cscj/cscjmanage/15_2.png)
