--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/8. 导入场景模板.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/8. 导入场景模板.md
@@ -1,1 +1,7 @@
-test
+### 4. 测试场景
+
+#### 4.3 测试场景管理 
+
+##### 4.3.9 导入场景模板
+
+全自动测试平台支持场景模板导入，用户可以将测试场景另存为模板，在导入场景时可以选择从哪个场景模板导入，无需下载文件，便于管理。本节将为您介绍导入场景模板的具体操作过程。
