--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/8. 导入场景模板.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/8. 导入场景模板.md
@@ -5,3 +5,11 @@
 ##### 4.3.9 导入场景模板
 
 全自动测试平台支持场景模板导入，用户可以将测试场景另存为模板，在导入场景时可以选择从哪个场景模板导入，无需下载文件，便于管理。本节将为您介绍导入场景模板的具体操作过程。
+
+##### 4.3.9.1 操作步骤
+
+a）进入全自动测试平台测试场景页面，选择需保存为场景模板的测试场景，单击右上角“另存为模版”，如图8-1所示：
+
+![8-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/moban_1.png)
+
+##### 图8-1 测试场景管理页面
