--- a/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/9. 查看测试场景修改日志.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/3. 测试场景管理/9. 查看测试场景修改日志.md
@@ -5,3 +5,11 @@
 ##### 4.3.10 查看测试场景修改日志
 
 本节将为您介绍如何查看测试场景的修改日志。在修改日志列表，您不仅可以看到测试场景的所有修改日志，还可以通过单击“回滚到此版本”选项，将测试场景的当前版本回滚到指定版本；同时您也可以单击“日志比较”选项，进行测试场景的版本差异对比。
+
+##### 4.3.10.1 操作步骤
+
+a）单击“测试场景 > 测试场景管理”，进入测试场景管理页面，如图9-1所示：
+
+![9-1](https://www.feisuanyz.com/fstest/cscj/cscjmanage/changjing_log_1.png)
+
+##### 图9-1 测试场景管理页面
