--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -1,1 +1,9 @@
-test
+### 4. 测试场景
+
+#### 4.4 测试场景配置
+
+##### 4.4.1 集合变量器的使用
+
+集合变量器作为SQL管理、变量集、Excel管理的媒介，用户可以通过集合变量器获取这三种集合的数据，包含集合的所有结果、集合的长度以及集合的某一个值。本节将结合集合变量器、循环控制器获取SQL管理中的数据，来为您展示如何使用集合变量器。
+
+##### 4.4.1.1 前提条件
