--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -7,3 +7,9 @@
 集合变量器作为SQL管理、变量集、Excel管理的媒介，用户可以通过集合变量器获取这三种集合的数据，包含集合的所有结果、集合的长度以及集合的某一个值。本节将结合集合变量器、循环控制器获取SQL管理中的数据，来为您展示如何使用集合变量器。
 
 ##### 4.4.1.1 前提条件
+
+集合变量器的使用在测试场景中进行，您需要提前创建好测试场景，关于如何创建测试场景具体可参见[《SoFlu全自动测试平台教程第4.3.3节：新建测试场景》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF/3.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/2.%20%E6%96%B0%E5%BB%BA%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF.md)。
+
+##### 4.4.1.2 操作步骤
+
+a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，新增一条SQL数据集，如图1-1所示：
