--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -13,3 +13,9 @@
 ##### 4.4.1.2 操作步骤
 
 a）进入全自动测试平台，单击页面上方“测试场景 > SQL管理”，进入SQL管理页面，新增一条SQL数据集，如图1-1所示：
+
+##### 说明：本节用到的SQL数据集如图1-2所示，用于查询产品信息。
+
+##### 若对于新增SQL数据集不清晰，具体可参见[《SoFlu全自动测试平台教程第4.2.1.2.2.2节：新增数据集》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/4.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF/2.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/2.%20%E6%95%B0%E6%8D%AE%E9%9B%86/2.%20%E6%96%B0%E5%A2%9E%E6%95%B0%E6%8D%AE%E9%9B%86.md)。
+
+![1-1](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_1.png)
