--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -43,3 +43,11 @@ d）配置集合变量器，如图1-5所示：
 ![1-5](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_5.png)
 
 ##### 图1-5 配置集合变量器
+
+e）变量类型选择“SQL管理”，如图1-6所示：
+
+![1-6](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_6.png)
+
+##### 图1-6 选择变量类型
+
+f）系统弹出SQL选择页面，选择需获取数据的SQL数据集，本节选择创建好的“查询产品信息”数据集，单击“确定”即可，如图1-7所示：
