--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -51,3 +51,13 @@ e）变量类型选择“SQL管理”，如图1-6所示：
 ##### 图1-6 选择变量类型
 
 f）系统弹出SQL选择页面，选择需获取数据的SQL数据集，本节选择创建好的“查询产品信息”数据集，单击“确定”即可，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_7.png)
+
+##### 图1-7 选择变量类型
+
+g）填写集合变量器的变量名，用于后续引用集合变量器所指代的SQL数据集，具体的引用规则如图1-8所示：
+
+##### 说明：一个集合变量器仅可以引用一个SQL数据集或一个变量集或一个Excel文件，不能引用多个数据集。
+
+![1-8](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_8.png)
