--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -81,3 +81,11 @@ j）设置循环控制器的循环次数，循环控制器的引用规则如图1
 ##### 说明：此处根据集合变量器的引用规则取SQL类型的集合长度作为循环次数，即：${变量名_字段列名_#}，其中集合变量器的变量名为sql01，需取的字段列名为product_id，故填写为${sql01_product_id_#}。
 
 ![1-11](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_11.png)
+
+##### 图1-11 设置循环次数
+
+k）在流程控制器（即循环控制器）下关联一个接口，用于遍历循环，如图1-12所示：
+
+![1-12](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_12.png)
+
+##### 图1-12 关联接口
