--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/1. 集合变量器的使用.md
@@ -105,3 +105,11 @@ m）录入接口所需入参，如图1-14所示：
 ##### m2）用户在具体使用时，请根据实际需求填写。
 
 ![1-14](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_14.png)
+
+##### 图1-14 录入接口入参
+
+n）参数值填写完成后，单击“保存”，再单击“执行测试场景”，如图1-15所示：
+
+![1-15](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/collection_15.png)
+
+##### 图1-15 执行测试场景
