--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/2. 创建自定义请求.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/2. 创建自定义请求.md
@@ -5,3 +5,9 @@
 ##### 4.4.2 创建自定义请求
 
 全自动测试平台支持用户在测试场景中创建自定义请求，用户可以选择创建HTTP或TCP请求，自定义输入相关请求信息。
+
+通过创建自定义请求，用户在测试场景中可使用的接口将不再局限于接口管理中的接口，可以直接自定义创建接口。
+
+本节为您介绍如何创建自定义请求。
+
+##### 4.4.2.1 操作步骤
