--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/2. 创建自定义请求.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/2. 创建自定义请求.md
@@ -11,3 +11,9 @@
 本节为您介绍如何创建自定义请求。
 
 ##### 4.4.2.1 操作步骤
+
+a）进入全自动测试平台，单击平台上方“测试场景 > 测试场景管理”进入测试场景管理页面，选择对应的测试用例模块和测试用例，进入场景配置。
+
+b）单击根测试场景旁的三个点按钮，选择“自定义请求”，即可开始创建自定义请求。
+
+![2-1](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/zidingyirequest_1.png)
