--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -5,3 +5,11 @@
 ##### 4.4.3 引入场景组件的使用
 
 本节主要介绍如何使用引入场景组件。
+
+##### 说明：通过使用引用场景组件，用户可以在当前测试场景中引入已绑定测试场景的测试用例，引入测试用例关联的测试场景通常为需要重复创建的公共场景。在执行当前测试场景时，会同时执行引入场景的内容。
+
+##### 4.4.3.1 前提条件
+
+已存在已绑定测试场景的测试用例。
+
+##### 4.4.3.2 操作步骤
