--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -13,3 +13,11 @@
 已存在已绑定测试场景的测试用例。
 
 ##### 4.4.3.2 操作步骤
+
+a）创建测试场景
+
+a1）进入全自动测试平台首页，单击页面上方“测试场景”进入测试场景页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-1.png)
+
+##### 图3-1 测试场景页面
