--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -21,3 +21,13 @@ a1）进入全自动测试平台首页，单击页面上方“测试场景”进
 ![3-1](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-1.png)
 
 ##### 图3-1 测试场景页面
+
+a2）选择用例模块和用例，填写测试场景的基本信息，单击“下一步”进入场景配置，如图3-2所示：
+
+##### 说明：此处示例选择的测试用例为登录成功测试用例。
+
+![3-2](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-2.png)
+
+##### 图3-2 进入场景配置
+
+b）进行场景配置
