--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -31,3 +31,9 @@ a2）选择用例模块和用例，填写测试场景的基本信息，单击“
 ##### 图3-2 进入场景配置
 
 b）进行场景配置
+
+b1）单击根测试场景旁的三个点按钮，选择“引入场景”，如图3-3所示：
+
+![3-3](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-3.png)
+
+##### 图3-3 选择引入场景
