--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -37,3 +37,9 @@ b1）单击根测试场景旁的三个点按钮，选择“引入场景”，如
 ![3-3](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-3.png)
 
 ##### 图3-3 选择引入场景
+
+b2）系统弹出选择测试用例页面，选择好测试用例后，单击“确定”即可，如图3-4所示：
+
+##### 说明：此处示例选择引入的是登录验证场景，也是进行登录操作时一般都会存在的场景，故此处作为一种公共场景进行选择。
+
+![3-4](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-4.png)
