--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -43,3 +43,11 @@ b2）系统弹出选择测试用例页面，选择好测试用例后，单击“
 ##### 说明：此处示例选择引入的是登录验证场景，也是进行登录操作时一般都会存在的场景，故此处作为一种公共场景进行选择。
 
 ![3-4](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-4.png)
+
+##### 图3-4 选择测试用例页面
+
+c）保存引入场景
+
+测试用例选择完成后，单击“保存”即可保存引入场景，如图3-5所示：
+
+![3-5](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-5.png)
