--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -51,3 +51,11 @@ c）保存引入场景
 测试用例选择完成后，单击“保存”即可保存引入场景，如图3-5所示：
 
 ![3-5](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-5.png)
+
+##### 图3-5 保存引入场景
+
+d）执行当前测试场景
+
+引入场景完成后，即可进行后续执行测试场景及查看执行报告的操作，如图3-6、3-7所示：
+
+![3-6](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-6.png)
