--- a/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/4. 测试场景配置/3. 引入场景组件的使用.md
@@ -59,3 +59,9 @@ d）执行当前测试场景
 引入场景完成后，即可进行后续执行测试场景及查看执行报告的操作，如图3-6、3-7所示：
 
 ![3-6](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-6.png)
+
+##### 图3-6 执行测试场景
+
+![3-7](https://www.feisuanyz.com/fstest/cscj/cscjpeizhi/yinruchangjing/yinruchangjing-7.png)
+
+##### 图3-7 查看执行报告
