--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/1. 查询性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/1. 查询性能测试.md
@@ -1,1 +1,9 @@
-test
+### 5. 性能测试
+
+#### 5.1 执行性能测试
+
+##### 5.1.1 基础概述
+
+性能测试对多个测试用例进行压力测试，指定每个测试用例的并发数，按持续时间表示进行多久时长的测试，按循环次数表示循环测试用例多少次。
+
+性能测试依赖于资源池环境，测试用例的并发数不能高于资源池可用并发数，否则将发起测试失败。
