--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/1. 查询性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/1. 查询性能测试.md
@@ -15,3 +15,9 @@
 ##### 5.1.2.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/xncs/1.png)
+
+##### 图1-1 性能测试页面
+
+b）性能测试页面展示了项目用到的所有性能测试。
