--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
@@ -7,3 +7,5 @@
 本节为您介绍如何创建性能测试。
 
 ##### 5.1.3.1 前提条件
+
+a）可用的环境配置，若没有，可参见文档[《SoFlu全自动测试平台教程第2.2.2节：新增环境配置》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/2.%20%E7%8E%AF%E5%A2%83%E9%85%8D%E7%BD%AE/2.%20%E6%96%B0%E5%A2%9E%E7%8E%AF%E5%A2%83%E9%85%8D%E7%BD%AE.md)进行创建。
