--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
@@ -30,3 +30,7 @@ c）设置超时时间。
 ##### 超时时间用于执行性能测试后，若在设置的超时时间内，性能测试还未执行完成，则该性能测试就会因超时而执行失败；若没有设置超时时间，则性能测试会一直保持在执行中的状态。
 
 d）单击“生成Cron”设置定时任务，可通过性能测试操作列“更多”选项开启或关闭定时任务。
+
+##### 注意：进行超时和定时任务设置时，系统会检验AccessKey是否填写，若未填写，用户需使用主账号在系统设置中配置好AccessKey后再进行相关操作，关于如何配置AccessKey可参见文档[《SoFlu全自动测试平台教程第1.4.2节：配置AccessKey》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/4.%20%E7%B3%BB%E7%BB%9F%E5%8F%82%E6%95%B0/2.%20%E9%85%8D%E7%BD%AEAccessKey.md)。
+
+![2-2](https://www.feisuanyz.com/fstest/xncs/createxncs/3_3.png)
