--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
@@ -44,3 +44,11 @@ f）设置并发用户数。
 ![2-3](https://www.feisuanyz.com/fstest/xncs/createxncs/3_2.png)
 
 ##### 图2-3 设置并发用户数
+
+g）设置并发测试方式：按循环次数或按持续时间。
+
+##### 其中按循环次数表示循环测试用例多少次，按持续时间表示进行多久时长的测试。
+
+h）设置并发分配策略：分为自动分配、固定节点和自定义三种。
+
+##### 自动分配：系统自动将并发用户数均匀分配给资源池下的所有资源。
