--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/2. 创建性能测试.md
@@ -52,3 +52,11 @@ g）设置并发测试方式：按循环次数或按持续时间。
 h）设置并发分配策略：分为自动分配、固定节点和自定义三种。
 
 ##### 自动分配：系统自动将并发用户数均匀分配给资源池下的所有资源。
+
+##### 固定资源：当分配的资源池存在多个资源，可以将所有并发用户数固定分配给该资源池下某一指定资源。
+
+##### 自定义：即设置占比，将并发用户数按照占比分配到各资源。
+
+##### 通过设置并发分配策略，可以合理利用资源，同时还可以测试不同资源的情况，最终在所有资源中进行性能测试的情况都会在测试报告中体现。
+
+i）性能测试所有信息设置完成后，单击“保存”即可。
