--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/3. 修改性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/3. 修改性能测试.md
@@ -5,3 +5,9 @@
 ##### 5.1.4 修改性能测试
 
 本节介绍修改性能测试的具体操作过程。
+
+##### 5.1.4.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/xncs/5.png)
