--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/3. 修改性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/3. 修改性能测试.md
@@ -11,3 +11,7 @@
 a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图3-1所示：
 
 ![3-1](https://www.feisuanyz.com/fstest/xncs/5.png)
+
+##### 图3-1 性能测试页面
+
+b）选中需修改的性能测试，单击操作列的修改按钮，后续步骤与新增类似。
