--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/4. 删除性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/4. 删除性能测试.md
@@ -11,3 +11,7 @@
 a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图4-1所示：
 
 ![4-1](https://www.feisuanyz.com/fstest/xncs/6.png)
+
+##### 图4-1 性能测试页面
+
+b）选中需删除的性能测试，单击操作列的删除按钮，系统弹出提示信息，单击“确定”即可。
