--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/5. 执行性能测试.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/1. 执行性能测试/5. 执行性能测试.md
@@ -9,3 +9,9 @@
 ##### 5.1.6.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图5-1所示：
+
+![5-1](https://www.feisuanyz.com/fstest/xncs/7.png)
+
+##### 图5-1 性能测试页面
+
+b）选中需执行性能测试，单击操作列的“执行测试”选项，系统提示“计划正在执行中，请稍后查看测试报告”，单击“确定”即可。
