--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/1. 查看性能测试报告列表.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/1. 查看性能测试报告列表.md
@@ -5,3 +5,11 @@
 ##### 5.2.1 基础概述
 
 性能测试报告列表展示每次执行性能测试的记录，查看详情展示性能测试的详细信息。
+
+##### 5.2.2 查看性能测试报告列表
+
+查看性能测试报告列表。
+
+##### 5.2.2.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图1-1所示：
