--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/1. 查看性能测试报告列表.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/1. 查看性能测试报告列表.md
@@ -13,3 +13,9 @@
 ##### 5.2.2.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方“性能测试”，进入性能测试页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/xncs/8.png)
+
+##### 图1-1 性能测试页面
+
+b）选中需查看的性能测试，单击操作列的“测试报告”选项，系统弹出测试报告页面，如图1-2所示：
