--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/2. 查看性能测试报告详情.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/2. 查看性能测试报告详情.md
@@ -9,3 +9,9 @@
 ##### 5.2.3.1 操作步骤
 
 a）进入测试报告列表页面，选择需查看的测试报告，单击“详情”即可查看性能测试报告详情，包含压力配置、测试概览、请求统计、错误记录、监控详情以及日志详情6个板块的数据，如下图所示：
+
+##### 单击“导出报告”可将性能测试报告以PDF格式导出。
+
+![2-1](https://www.feisuanyz.com/fstest/xncs/ceshireport/report_1.png)
+
+##### 图2-1 查看性能测试报告详情
