--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
@@ -13,3 +13,9 @@ a）用户需要先安装prometheus监控工具；
 b）然后在被测试的服务器上安装node_exporter插件，用于将在被测试的服务器上收集的性能指标参数传给prometheus；
 
 c）在平台上执行完性能测试后，测试报告上会显示收集的CPU、内存、磁盘以及网卡输入输出等变化指标信息；
+
+d）用户可根据收集的数据进行系统分析和调优。
+
+##### 5.2.4.2 操作步骤
+
+a）在 https://prometheus.io/download/ 下载最新版本的promentheus和node_exporter。
