--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
@@ -19,3 +19,11 @@ d）用户可根据收集的数据进行系统分析和调优。
 ##### 5.2.4.2 操作步骤
 
 a）在 https://prometheus.io/download/ 下载最新版本的promentheus和node_exporter。
+
+b）使用xftp传输工具将prometheus安装包上传至服务器A，同时解压到/usr/local目录下（默认端口为9090）。
+
+c）解压之后可以看到prometheus和promentheus.yml两个文件，如图3-1所示：
+
+![3-1](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_3.jpg)
+
+##### 图3-1 解压prometheus安装包
