--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
@@ -27,3 +27,9 @@ c）解压之后可以看到prometheus和promentheus.yml两个文件，如图3-1
 ![3-1](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_3.jpg)
 
 ##### 图3-1 解压prometheus安装包
+
+d）再次使用xftp传输工具将node_exporter安装包上传至被测试的服务器B同时解压到/usr/local目录下（默认端口9100）。
+
+e）从服务器A进入prometheus.yml文件，创建名为node_controller1的job，并配置node_exporter地址，如图3-2所示：
+
+##### 说明：若需监控多台服务器，则创建多个job即可。
