--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
@@ -41,3 +41,13 @@ e）从服务器A进入prometheus.yml文件，创建名为node_controller1的job
 f）分别启动node_exporter和prometheus，如图3-3、3-4所示，若显示端口被占用，则说明启动成功：
 
 ![3-3](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng__6_2.jpg)
+
+##### 图3-3 启动node_exporter
+
+![3-4](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_6_1.jpg)
+
+##### 图3-4 启动prometheus
+
+g）打开浏览器，访问http://服务器A地址：9090，就可以看到服务器B的监控，如图3-5所示：
+
+![3-5](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_7.jpg)
