--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
@@ -67,3 +67,11 @@ i）输入prometheus地址，如图3-7所示：
 ##### 图3-7 系统参数页面
 
 j）在系统设置页面，再次选择“服务 > 资源池管理”。
+
+k）选择一个资源池，单击“资源管理”选项，进入资源管理页面。
+
+l）在新增或修改资源时，输入监控指标地址（即服务器B的地址），如图3-8所示：
+
+![3-8](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_10.png)
+
+##### 图3-8 新增或修改资源页面
