--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/3. 查看测试报告监控数据.md
@@ -75,3 +75,9 @@ l）在新增或修改资源时，输入监控指标地址（即服务器B的地
 ![3-8](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_10.png)
 
 ##### 图3-8 新增或修改资源页面
+
+m）在全自动测试平台页面上方，选择“性能测试”功能模块，在新增或修改性能测试时，选择对应的资源池，如图3-9所示：
+
+![3-9](https://www.feisuanyz.com/fstest/xncs/ceshireport/jiankongjicheng_11.png)
+
+##### 图3-9 新增或修改性能测试页面
