--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/4. 对比测试性能报告.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/4. 对比测试性能报告.md
@@ -5,3 +5,11 @@
 ##### 5.2.5 对比测试性能报告
 
 通过对比性能测试报告，用户可以直观地看到两份报告间负载、响应时间等数据对比信息。
+
+本节将为您具体介绍如何对比性能测试报告。
+
+##### 5.2.5.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方“性能测试”选项，进入性能测试列表页面，如图4-1所示：
+
+![4-1](https://www.feisuanyz.com/fstest/xncs/ceshireport/contestreport_1.png)
