--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/4. 对比测试性能报告.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/2. 查看性能测试报告/4. 对比测试性能报告.md
@@ -13,3 +13,9 @@
 a）进入全自动测试平台，单击页面上方“性能测试”选项，进入性能测试列表页面，如图4-1所示：
 
 ![4-1](https://www.feisuanyz.com/fstest/xncs/ceshireport/contestreport_1.png)
+
+##### 图4-1 性能测试报告页面
+
+b）选择对应性能测试，单击“更多 > 测试报告”，进入测试报告列表页面，如图4-2所示：
+
+![4-2](https://www.feisuanyz.com/fstest/xncs/ceshireport/contestreport_2.png)
