--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/3. 本地模式/1. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/3. 本地模式/1. 部署本地模式.md
@@ -3,3 +3,13 @@
 #### 5.3 本地模式
  
 ##### 5.3.1 部署本地模式
+
+全自动测试平台性能测试支持本地模式，即无需资源池中的资源，便可本地执行性能测试，并在全自动测试平台中查看性能测试报告。
+
+##### 5.3.1.1 操作步骤
+
+a）进入全自动测试平台，单击右上角“工具下载”选项，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fstest/xncs/localmode/bendimoshi_1.png)
+
+##### 图1-1 单击“工具下载”
