--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/3. 本地模式/1. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/3. 本地模式/1. 部署本地模式.md
@@ -45,3 +45,11 @@ java -jar –javaagent: /usr/local/feisuanyz-local-performance/sjt_agent.jar
 java -jar -javaagent:/usr/local/feisuanyz-local-performance/sjt_agent.jar 
 /usr/local/feisuanyz-local-performance/feisuanyz-local-performance.jar 
 lijind@feisuan a123456 /usr/local/61828801b3b46200064efc2f.jmx 
+/usr/local/apache-jmeter-5.4.1
+```
+
+g）若出现如图1-4所示信息显示，则说明性能测试执行成功。
+
+![1-4](https://www.feisuanyz.com/fstest/xncs/localmode/bendimoshi_5.png)
+
+##### 图1-4 执行成功
