--- a/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/3. 本地模式/1. 部署本地模式.md
+++ b/SoFlu全自动测试平台教程/4. 测试场景/5. 性能测试/3. 本地模式/1. 部署本地模式.md
@@ -53,3 +53,9 @@ g）若出现如图1-4所示信息显示，则说明性能测试执行成功。
 ![1-4](https://www.feisuanyz.com/fstest/xncs/localmode/bendimoshi_5.png)
 
 ##### 图1-4 执行成功
+
+h）进入全自动测试平台“性能测试”功能模块，选择已本地执行的性能测试，单击“更多”选项，选择测试报告，如图1-5所示：
+
+![1-5](https://www.feisuanyz.com/fstest/xncs/localmode/bendimoshi_8.png)
+
+##### 图1-5 选择测试报告
