--- a/SoFlu全自动测试平台教程/6. 示例演示/1. 如何新增资源池.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/1. 如何新增资源池.md
@@ -1,1 +1,5 @@
-test
+### 6. 示例演示
+
+#### 6.1 如何新增资源池
+
+本节将提供新增资源池时用到的具体参数值，操作过程见[《SoFlu全自动测试平台教程第1.1.3节：新增资源池》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/1.%20%E7%B3%BB%E7%BB%9F%E9%85%8D%E7%BD%AE/1.%20%E8%B5%84%E6%BA%90%E6%B1%A0%E9%85%8D%E7%BD%AE/3.%20%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E6%B1%A0.md)。
