--- a/SoFlu全自动测试平台教程/6. 示例演示/1. 如何新增资源池.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/1. 如何新增资源池.md
@@ -11,3 +11,9 @@ b）Docker镜像：10.1.211.21/dal/jmeter-test:v1
 c）Docker Host：tcp://172.16.111.111:2375
 
 d）堆大小：-Xms1g -Xmx1g -XX:MaxMetaspaceSize=256m
+
+e）GC回收：-XX:+UseG1GC -XX:MaxGCPauseMillis=100 -XX:G1ReservePercent=20
+
+![1-1](https://www.feisuanyz.com/fstest/slys/6-1.png)
+
+##### 图1-1 新增资源池
