--- a/SoFlu全自动测试平台教程/6. 示例演示/4. 如何新增测试用例.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/4. 如何新增测试用例.md
@@ -7,3 +7,11 @@
 a）用例名称：测试支付流水列表
 
 b）用例等级：P0
+
+c）类型：功能测试
+
+d）前置条件：登录账号XX，在支付管理-支付列表查询
+
+e）步骤描述：无 预期结果：展示最近20条数据
+
+f）步骤描述：查询条件为输入手机号 预期结果：展示指定手机号的数据
