--- a/SoFlu全自动测试平台教程/6. 示例演示/4. 如何新增测试用例.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/4. 如何新增测试用例.md
@@ -15,3 +15,7 @@ d）前置条件：登录账号XX，在支付管理-支付列表查询
 e）步骤描述：无 预期结果：展示最近20条数据
 
 f）步骤描述：查询条件为输入手机号 预期结果：展示指定手机号的数据
+
+![4-1](https://www.feisuanyz.com/fstest/slys/6.png)
+
+##### 图4-1 新增测试用例
