--- a/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
@@ -1,1 +1,11 @@
-test
+### 6. 示例演示
+
+#### 6.5 如何新增接口
+
+本节将提供新增接口时用到的具体参数值，操作过程见《SoFlu全自动测试平台教程第4.1.2.1节：新增接口》。
+
+a1）接口名称：查询支付流水列表
+
+b1）请求方式：GET
+
+c1）环境配置：SAAS
