--- a/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
@@ -9,3 +9,11 @@ a1）接口名称：查询支付流水列表
 b1）请求方式：GET
 
 c1）环境配置：SAAS
+
+d1）请求地址：/pay/pay/bg/list
+
+e1）请求参数：Parameters新增pageSize、pageIndex，值各为1
+
+![5-1](https://www.feisuanyz.com/fstest/slys/10.png)
+
+##### 图5-1 修改接口1
