--- a/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
@@ -17,3 +17,13 @@ e1）请求参数：Parameters新增pageSize、pageIndex，值各为1
 ![5-1](https://www.feisuanyz.com/fstest/slys/10.png)
 
 ##### 图5-1 修改接口1
+
+a2）接口名称：查询支付详情
+
+b2）请求方式：GET
+
+c2）环境配置：SAAS
+
+d2）请求地址：/pay/pay/bg/baseInfo
+
+e2）请求参数：Parameters新增payTradeBillId，值为1
