--- a/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/5. 如何新增接口.md
@@ -27,3 +27,7 @@ c2）环境配置：SAAS
 d2）请求地址：/pay/pay/bg/baseInfo
 
 e2）请求参数：Parameters新增payTradeBillId，值为1
+
+![5-2](https://www.feisuanyz.com/fstest/slys/12.png)
+
+##### 图5-2 修改接口2
