--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -1,1 +1,9 @@
-test
+### 6. 示例演示
+
+#### 6.6 如何新增测试场景
+
+本节将通过具体示例来介绍如何新建测试场景。
+
+#### 6.6.1 示例介绍
+
+本测试场景将绑定两个接口，一个接口为“查询支付列表”，一个接口为“查询支付详情”。示例中通过“查询支付列表”接口来提取流水号，再根据提取到的流水号去查询对应的支付详情。
