--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -17,3 +17,13 @@ a）选择测试用例
 ##### 图6-1 选择测试用例
 
 b）填写测试场景基本信息。
+
+b1）名称：测试支付列表第一笔的支付详情
+
+b2）环境配置：SAAS
+
+![6-2](https://www.feisuanyz.com/fstest/slys/15.png)
+
+##### 图6-2 填写测试场景基本信息
+
+c）进行场景配置。
