--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -27,3 +27,11 @@ b2）环境配置：SAAS
 ##### 图6-2 填写测试场景基本信息
 
 c）进行场景配置。
+
+![6-3](https://www.feisuanyz.com/fstest/slys/16.png)
+
+##### 图6-3 进行场景配置
+
+d）为根场景添加场景组。
+
+场景组名：分组1
