--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -35,3 +35,11 @@ c）进行场景配置。
 d）为根场景添加场景组。
 
 场景组名：分组1
+
+![6-4](https://www.feisuanyz.com/fstest/slys/17.png)
+
+##### 图6-4 为根场景添加场景组
+
+e）为场景组绑定接口“查询支付列表”和“查询支付详情”。
+
+![6-5](https://www.feisuanyz.com/fstest/slys/18.png)
