--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -43,3 +43,13 @@ d）为根场景添加场景组。
 e）为场景组绑定接口“查询支付列表”和“查询支付详情”。
 
 ![6-5](https://www.feisuanyz.com/fstest/slys/18.png)
+
+##### 图6-5 为场景组绑定接口
+
+![6-6](https://www.feisuanyz.com/fstest/slys/19.png)
+
+##### 图6-6 为场景组绑定“查询支付列表”接口
+
+![6-7](https://www.feisuanyz.com/fstest/slys/20.png)
+
+##### 图6-7 为场景组绑定“查询支付详情”接口
