--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -63,3 +63,13 @@ f2）后置处理器类型选择：JSON提取器
 f3）变量名称：payTradeBillId
 
 f4）匹配数量：1
+
+f5）是否拼接结果值：否
+
+f6）JSON解析表达式：$.data.records[0].payTradeBillId
+
+![6-8](https://www.feisuanyz.com/fstest/slys/21.png)
+
+##### 图6-8 新增后置处理器
+
+![6-9](https://www.feisuanyz.com/fstest/slys/22.png)
