--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -73,3 +73,13 @@ f6）JSON解析表达式：$.data.records[0].payTradeBillId
 ##### 图6-8 新增后置处理器
 
 ![6-9](https://www.feisuanyz.com/fstest/slys/22.png)
+
+##### 图6-9 配置后置处理器参数
+
+g）将提取到的流水号作为接口“查询支付详情”的参数值。
+
+将接口变量payTradeBillId的参数值设置为${payTradeBillId}
+
+![6-10](https://www.feisuanyz.com/fstest/slys/23.png)
+
+##### 图6-10 点击编辑接口参数
