--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -83,3 +83,13 @@ g）将提取到的流水号作为接口“查询支付详情”的参数值。
 ![6-10](https://www.feisuanyz.com/fstest/slys/23.png)
 
 ##### 图6-10 点击编辑接口参数
+
+![6-11](https://www.feisuanyz.com/fstest/slys/24.png)
+
+##### 图6-11 配置接口参数
+
+h）执行测试场景。
+
+![6-12](https://www.feisuanyz.com/fstest/slys/25.png)
+
+##### 图6-12 执行测试场景
