--- a/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/6. 如何新增测试场景.md
@@ -93,3 +93,9 @@ h）执行测试场景。
 ![6-12](https://www.feisuanyz.com/fstest/slys/25.png)
 
 ##### 图6-12 执行测试场景
+
+i）查看测试报告。
+
+![6-13](https://www.feisuanyz.com/fstest/slys/26.png)
+
+##### 图6-13 查看测试报告
