--- a/SoFlu全自动测试平台教程/6. 示例演示/7. 如何新增性能测试.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/7. 如何新增性能测试.md
@@ -5,3 +5,13 @@
 本节将提供新增性能测试时用到的具体参数值。
 
 a）名称：支付列表查询支付详情
+
+b）环境：SAAS
+
+c）资源池：资源池01
+
+d）导入测试用例：测试支付列表第一笔的支付详情
+
+e）导入后，填写并发用户数、压测时长及增加并发用户间隔秒数
+
+![7-1](https://www.feisuanyz.com/fstest/slys/27.png)
