--- a/SoFlu全自动测试平台教程/6. 示例演示/7. 如何新增性能测试.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/7. 如何新增性能测试.md
@@ -15,3 +15,9 @@ d）导入测试用例：测试支付列表第一笔的支付详情
 e）导入后，填写并发用户数、压测时长及增加并发用户间隔秒数
 
 ![7-1](https://www.feisuanyz.com/fstest/slys/27.png)
+
+##### 图7-1 性能测试页面
+
+![7-2](https://www.feisuanyz.com/fstest/slys/28.png)
+
+##### 图7-2 新增性能测试
