--- a/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
@@ -5,3 +5,13 @@
 本节将通过具体示例来介绍如何新建测试计划。
 
 #### 6.8.1 操作步骤
+
+a）新增测试计划。
+
+a1）计划名称：支付列表测试计划
+
+a2）测试阶段：冒烟测试
+
+![8-1](https://www.feisuanyz.com/fstest/slys/35.png)
+
+##### 图8-1 测试计划页面
