--- a/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
@@ -15,3 +15,13 @@ a2）测试阶段：冒烟测试
 ![8-1](https://www.feisuanyz.com/fstest/slys/35.png)
 
 ##### 图8-1 测试计划页面
+
+![8-2](https://www.feisuanyz.com/fstest/slys/36.png)
+
+##### 图8-2 新增测试计划
+
+b）关联测试用例。
+
+![8-3](https://www.feisuanyz.com/fstest/slys/37.png)
+
+##### 图8-3 关联测试用例
