--- a/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
@@ -25,3 +25,11 @@ b）关联测试用例。
 ![8-3](https://www.feisuanyz.com/fstest/slys/37.png)
 
 ##### 图8-3 关联测试用例
+
+c）关联性能测试。
+
+![8-4](https://www.feisuanyz.com/fstest/slys/38.png)
+
+##### 图8-4 关联性能测试
+
+d）启动测试计划。
