--- a/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
@@ -33,3 +33,13 @@ c）关联性能测试。
 ##### 图8-4 关联性能测试
 
 d）启动测试计划。
+
+![8-5](https://www.feisuanyz.com/fstest/slys/39.png)
+
+##### 图8-5 启动测试计划
+
+e）查询测试计划报告。
+
+![8-6](https://www.feisuanyz.com/fstest/slys/40.png)
+
+##### 图8-6 查询测试计划报告1
