--- a/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
+++ b/SoFlu全自动测试平台教程/6. 示例演示/8. 如何新建测试计划.md
@@ -43,3 +43,7 @@ e）查询测试计划报告。
 ![8-6](https://www.feisuanyz.com/fstest/slys/40.png)
 
 ##### 图8-6 查询测试计划报告1
+
+![8-7](https://www.feisuanyz.com/fstest/slys/41.png)
+
+##### 图8-7 查询测试计划报告2
