--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/1. 如何创建项目.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/1. 如何创建项目.md
@@ -5,3 +5,11 @@
 本节主要介绍通过(后端)全自动开发平台创建项目的具体操作方法。
 
 ##### 2.1.1 操作步骤
+
+a）进入(后端)全自动开发平台，系统默认显示项目管理页面，单击“创建项目”，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ver01/2-1-2.png)
+
+##### 图1-1 项目管理页面
+
+b）系统显示创建项目页面，请根据实际需求填写项目的基本信息，填写完成后单击“确定”，如图1-2所示：
