--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/2. 如何加载资源.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/2. 如何加载资源.md
@@ -1,1 +1,9 @@
-test
+### 2. 创建项目
+
+#### 2.2 如何加载资源
+
+本节主要介绍向已创建项目中加载资源的具体操作方法。
+
+##### （后端）全自动开发平台集成了项目开发过程中常用到的资源，用户可根据项目需求自定义添加所需资源。
+
+##### 2.2.1 操作步骤
