--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/2. 如何加载资源.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/2. 创建项目/2. 如何加载资源.md
@@ -7,3 +7,11 @@
 ##### （后端）全自动开发平台集成了项目开发过程中常用到的资源，用户可根据项目需求自定义添加所需资源。
 
 ##### 2.2.1 操作步骤
+
+a）单击已创建项目的项目卡片上的设置按钮，选择“加载项”，如图2-1所示：
+
+![2-1](https://www.feisuanyz.com/fsimage/ks-image/ver01/2-2-1.png)
+
+##### 图2-1 选择加载项
+
+b）系统显示项目加载项页面，单击“资源”页签，如图2-2所示：
