--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
@@ -3,3 +3,11 @@
 #### 3.1 如何连接数据库
 
 本节主要介绍在项目中连接数据库的具体操作方法。
+
+##### 3.1.1 前提条件
+
+目前全自动开发平台只能支持连接公网的数据库。
+
+##### 3.1.2 操作步骤
+
+a）在平台功能模板界面中，选择“数据库设计”功能模块，系统显示数据库设计页面，如图1-1所示：
