--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
@@ -11,3 +11,11 @@
 ##### 3.1.2 操作步骤
 
 a）在平台功能模板界面中，选择“数据库设计”功能模块，系统显示数据库设计页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_6-1_img.png)
+
+##### 图1-1 数据库设计页面
+
+b）单击“新增数据库”，系统显示“新增项目数据库”页面，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_6-2_img.png)
