--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
@@ -27,3 +27,9 @@ c）输入数据库名称，单击“确定”。
 d）选中已创建数据库，单击右侧的竖形省略号，选择“数据库连接”，如图1-3所示：
 
 ![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_6-3_img.png)
+
+##### 图1-3 选择数据库连接
+
+e）系统显示“数据库连接管理”页面，单击“新增”，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_6-4_img.png)
