--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/3. 连接数据库/1. 如何连接数据库.md
@@ -55,3 +55,11 @@ g1）若提示“连接成功”信息，说明连接数据库正确。
 g2）若提示失败信息，请检查连接数据库的相关配置信息，修改正确后再重新测试。
 
 ![1-6](https://www.feisuanyz.com/fsimage/ks-image/ks_6-6_img.png)
+
+##### 图1-6 测试连接数据信息
+
+h）单击“提交”，系统提示“新增成功”信息，如图1-7所示：
+
+![1-7](https://www.feisuanyz.com/fsimage/ks-image/ks_6-7_img.png)
+
+##### 图1-7 新增数据库
