--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/4. 创建资源实例/1. 如何新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/4. 创建资源实例/1. 如何新增资源实例.md
@@ -5,3 +5,9 @@
 本节主要介绍在项目中新增资源实例的具体操作方法。
 
 ##### 4.1.1 前提条件
+
+在新增资源实例之前，您需要先加载对应的资源，关于如何加载资源请参见[《SoFlu快速入门教程（2022-详细版）第2.2节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B%EF%BC%882022-%E8%AF%A6%E7%BB%86%E7%89%88%EF%BC%89/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/2.%20%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90.md)。
+
+##### 4.1.2 操作步骤
+
+a）在平台功能模块界面中，选择“资源实例”功能模块，系统显示“资源实例”页面，如图1-1所示：
