--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/4. 创建资源实例/1. 如何新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/4. 创建资源实例/1. 如何新增资源实例.md
@@ -11,3 +11,9 @@
 ##### 4.1.2 操作步骤
 
 a）在平台功能模块界面中，选择“资源实例”功能模块，系统显示“资源实例”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_4-1_img.png)
+
+##### 图1-1 选择资源实例
+
+b）单击“分布式中间件”后的“+”，选择“新增资源实例”，如图1-2所示：
