--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/4. 创建资源实例/1. 如何新增资源实例.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/4. 创建资源实例/1. 如何新增资源实例.md
@@ -23,3 +23,9 @@ b）单击“分布式中间件”后的“+”，选择“新增资源实例”
 ![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_4-2_img.png)
 
 ##### 图1-2 新增资源实例
+
+c）系统显示“新增资源实例”页面，选择系统默认的环境，配置新增资源实例的配置项信息，如图1-3所示：
+
+![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_4-3_img.png)
+
+##### 图1-3 配置资源实例的配置项
