--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/5. 新增SQL/1. 如何新增SQL信息.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/5. 新增SQL/1. 如何新增SQL信息.md
@@ -9,3 +9,13 @@
 a）您需要先加载好分布式中间件或嵌入式中间件资源，关于如何加载资源请参见[《SoFlu快速入门教程（2022-详细版）第2.2节：如何加载资源》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B%EF%BC%882022-%E8%AF%A6%E7%BB%86%E7%89%88%EF%BC%89/2.%20%E5%88%9B%E5%BB%BA%E9%A1%B9%E7%9B%AE/2.%20%E5%A6%82%E4%BD%95%E5%8A%A0%E8%BD%BD%E8%B5%84%E6%BA%90.md)。
 
 b）您需要创建好分布式中间件或嵌入式中间件资源实例，关于如何创建资源实例请参见[《SoFlu快速入门教程（2022-详细版）第4.1节：如何新增资源实例》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B%EF%BC%882022-%E8%AF%A6%E7%BB%86%E7%89%88%EF%BC%89/4.%20%E5%88%9B%E5%BB%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E5%A6%82%E4%BD%95%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md)。
+
+##### 5.1.2 操作步骤
+
+a）在平台功能模块界面中，选择“SQL管理”功能模块，系统显示“SQL管理”页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_7-0_img.png)
+
+##### 图1-1 SQL管理页面
+
+b）单击页面左上方“新增SQL组”页签，系统显示“新增SQL组”页面，输入SQL组的相关信息，如图1-2所示：
