--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/5. 新增SQL/1. 如何新增SQL信息.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/5. 新增SQL/1. 如何新增SQL信息.md
@@ -61,3 +61,13 @@ i）系统显示“新增SQL信息”页面，您需要填写SQL名称、选择S
 j）单击“字段映射配置”选项，系统显示字段映射配置页面，单击“新增”，新增对应的SQL字段映射关系，如图1-7所示：
 
 ![1-7](https://www.feisuanyz.com/fsimage/ks-image/ks_7-6_img.png)
+
+##### 图1-7 字段映射配置页面
+
+##### 说明：
+
+##### 目前只有查询的SQL信息才需要配置字段映射关系。
+
+##### 您可以单击“删除”，删除新增的映射字段。
+
+k）字段映射配置完成后，单击“确定”，退出字段映射配置页面。
