--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -1,1 +1,9 @@
-test
+### 6. 创建接口
+
+#### 6.1 如何新增接口
+
+本节主要介绍如何在项目中新增接口的具体操作方法。
+
+##### 6.1.1 操作步骤
+
+a）在平台功能模块界面中，选择“接口管理”功能模块，系统显示接口管理页面，如图1-1所示：
