--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -7,3 +7,11 @@
 ##### 6.1.1 操作步骤
 
 a）在平台功能模块界面中，选择“接口管理”功能模块，系统显示接口管理页面，如图1-1所示：
+
+![1-1](https://www.feisuanyz.com/fsimage/ks-image/ks_5-1_img.png)
+
+##### 图1-1 接口管理
+
+b）单击“新增接口模块”，系统显示“新增接口模块”页面，输入接口模块的信息，如图1-2所示：
+
+![1-2](https://www.feisuanyz.com/fsimage/ks-image/ks_5-2_img.png)
