--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -25,3 +25,11 @@ d）单击已创建模块后的“+”，选择“新增接口”，如图1-3所
 ![1-3](https://www.feisuanyz.com/fsimage/ks-image/ks_5-3_img.png)
 
 ##### 图1-3 新增接口
+
+e）在“新增接口信息 > 基本信息”页面，配置接口的基本信息，如图1-4所示：
+
+![1-4](https://www.feisuanyz.com/fsimage/ks-image/ks_5-4_img.png)
+
+##### 图1-4 配置新增接口的基本信息
+
+f）单击“下一步”。
