--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -79,3 +79,11 @@ k）单击“新增入口参数”，配置接口的入口参数信息，如图1
 l）配置入口参数的输出结果时，在“输出结果 > 选择数据”页面，选择输出结果的“成功”项，如图1-9所示：
 
 ![1-9](https://www.feisuanyz.com/fsimage/ks-image/ks_5-9_img.png)
+
+##### 图1-9 选择输出结果的成功项
+
+m）完成新增接口的入口参数的信息配置，如图1-10所示：
+
+![1-10](https://www.feisuanyz.com/fsimage/ks-image/ks_5-10_img.png)
+
+##### 图1-10 配置新增接口的入口参数
