--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -87,3 +87,13 @@ m）完成新增接口的入口参数的信息配置，如图1-10所示：
 ![1-10](https://www.feisuanyz.com/fsimage/ks-image/ks_5-10_img.png)
 
 ##### 图1-10 配置新增接口的入口参数
+
+n）单击“提交，进入“模型”页面”，如图1-11所示：
+
+![1-11](https://www.feisuanyz.com/fsimage/ks-image/ks_5-11_img.png)
+
+##### 图1-11 新增接口信息的模型页面
+
+o）单击“进入模型编辑”，系统显示“窗体视图”页面，选择“组件列表 > 工具 > 输出结果”，拖拽“输出结果”组件至视图区域，如图1-12所示：
+
+![1-12](https://www.feisuanyz.com/fsimage/ks-image/ks_5-12_img.png)
