--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -97,3 +97,11 @@ n）单击“提交，进入“模型”页面”，如图1-11所示：
 o）单击“进入模型编辑”，系统显示“窗体视图”页面，选择“组件列表 > 工具 > 输出结果”，拖拽“输出结果”组件至视图区域，如图1-12所示：
 
 ![1-12](https://www.feisuanyz.com/fsimage/ks-image/ks_5-12_img.png)
+
+##### 图1-12 窗体视图
+
+p）连接组件的流程图，如图1-13所示：
+
+![1-13](https://www.feisuanyz.com/fsimage/ks-image/ks_5-13_img.png)
+
+##### 图1-13 连接组件流程图
