--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -105,3 +105,13 @@ p）连接组件的流程图，如图1-13所示：
 ![1-13](https://www.feisuanyz.com/fsimage/ks-image/ks_5-13_img.png)
 
 ##### 图1-13 连接组件流程图
+
+q）选中流程图中的输出结果组件，在右侧输出结果中配置“响应结果”，如图1-14所示：
+
+![1-14](https://www.feisuanyz.com/fsimage/ks-image/ks_5-14_img.png)
+
+##### 图1-14 配置输出结果的响应结果
+
+r）单击“确认”，完成配置响应结果。
+
+s）配置输出结果组件的“输出项值”，单击“未选中记录”方框，如图1-15、图1-16、图1-17、图1-18所示：
