--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -141,3 +141,11 @@ t）单击“确定”，完成配置输出项值，如图1-19所示：
 u）完成组件配置，如图1-20所示，单击“保存并退出”：
 
 ![1-20](https://www.feisuanyz.com/fsimage/ks-image/ks_5-20_img.png)
+
+##### 图1-20 保存组件配置
+
+v）单击“提交”，完成接口配置，如图1-21所示：
+
+![1-21](https://www.feisuanyz.com/fsimage/ks-image/ks_5-21_img.png)
+
+##### 图1-21 提交接口配置
