--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -149,3 +149,9 @@ v）单击“提交”，完成接口配置，如图1-21所示：
 ![1-21](https://www.feisuanyz.com/fsimage/ks-image/ks_5-21_img.png)
 
 ##### 图1-21 提交接口配置
+
+w）单击“提交”后的“...”，选择“发布接口”，如图1-22所示：
+
+![1-22](https://www.feisuanyz.com/fsimage/ks-image/ks_5-22_img.png)
+
+##### 图1-22 发布接口
