--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -155,3 +155,13 @@ w）单击“提交”后的“...”，选择“发布接口”，如图1-22所
 ![1-22](https://www.feisuanyz.com/fsimage/ks-image/ks_5-22_img.png)
 
 ##### 图1-22 发布接口
+
+x）单击“提交”后的“...”，选择“测试用例”，如图1-23所示：
+
+![1-23](https://www.feisuanyz.com/fsimage/ks-image/ks_5-23_img.png)
+
+##### 图1-23 测试接口用例
+
+y）单击“编辑”，配置Body参数信息，如图1-24所示：
+
+![1-24](https://www.feisuanyz.com/fsimage/ks-image/ks_5-24_img.png)
