--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/1. 如何新增接口.md
@@ -165,3 +165,11 @@ x）单击“提交”后的“...”，选择“测试用例”，如图1-23所
 y）单击“编辑”，配置Body参数信息，如图1-24所示：
 
 ![1-24](https://www.feisuanyz.com/fsimage/ks-image/ks_5-24_img.png)
+
+##### 图1-24 配置测试用例参数
+
+z）单击“保存”保存配置，再单击“执行”执行测试用例并查看执行输出结果，如图1-25所示：
+
+![1-25](https://www.feisuanyz.com/fsimage/ks-image/ks_5-25_img.png)
+
+##### 图1-25 执行测试用例并查看输出结果
