--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
@@ -7,3 +7,7 @@
 ##### 6.2.1 前提条件
 
 a）您已经成功连接数据库，关于如何连接数据库具体请参见[《SoFlu快速入门教程（2022-详细版）第3.1节：如何连接数据库》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B%EF%BC%882022-%E8%AF%A6%E7%BB%86%E7%89%88%EF%BC%89/3.%20%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93/1.%20%E5%A6%82%E4%BD%95%E8%BF%9E%E6%8E%A5%E6%95%B0%E6%8D%AE%E5%BA%93.md)。
+
+b）您已经成功连接分布式或嵌入式中间件资源，关于如何连接中间件资源具体请参见[《SoFlu快速入门教程（2022-详细版）第4.1节：如何新增资源实例》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%85%A8%E8%87%AA%E5%8A%A8%E5%BC%80%E5%8F%91%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/SoFlu%EF%BC%88%E5%90%8E%E7%AB%AF%EF%BC%89%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B/SoFlu%E5%BF%AB%E9%80%9F%E5%85%A5%E9%97%A8%E6%95%99%E7%A8%8B%EF%BC%882022-%E8%AF%A6%E7%BB%86%E7%89%88%EF%BC%89/4.%20%E5%88%9B%E5%BB%BA%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B/1.%20%E5%A6%82%E4%BD%95%E6%96%B0%E5%A2%9E%E8%B5%84%E6%BA%90%E5%AE%9E%E4%BE%8B.md)。
+
+##### 6.2.2 操作步骤
