--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
@@ -27,3 +27,11 @@ b）选中数据库，如图2-2所示，单击“下一步”：
 c）勾选需要生成SQL信息的表，如图2-3所示，单击“下一步”：
 
 ![2-3](https://www.feisuanyz.com/fsimage/ks-image/ks_14-2_img.png)
+
+##### 图2-3 选择数据库表
+
+d）勾选全部，选择接口模块、SQL组和SQL模块，如图2-4所示：
+
+![2-4](https://www.feisuanyz.com/fsimage/ks-image/ks_14-3_img.png)
+
+##### 图2-4 选择勾选全部
