--- a/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
+++ b/SoFlu Tutorial（ Community Edition ）/SoFlu社区版快速入门教程/SoFlu快速入门教程（2022-详细版）/6. 创建接口/2. 如何自动生成接口.md
@@ -35,3 +35,9 @@ d）勾选全部，选择接口模块、SQL组和SQL模块，如图2-4所示：
 ![2-4](https://www.feisuanyz.com/fsimage/ks-image/ks_14-3_img.png)
 
 ##### 图2-4 选择勾选全部
+
+##### 说明：全自动开发平台最新发布的功能中增加了自动生成实体模型，若不需自动生成实体模型，您可以取消勾选“创建实体模型”，如图6-2-5所示，若需要自动创建实体模型，您需要先创建实体模型模块，具体请参见操作指南13.2.3如何自动生成实体模型。
+
+![2-5](https://www.feisuanyz.com/fsimage/ks-image/ksrm_6_2_5.png)
+
+##### 图2-5 取消勾选创建实体模型
